[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2img"
version = "0.1.0"
description = "A tool to convert PDF files to images page by page"
authors = [
    {name = "Kim", email = "kime541200@outlook.com"},
]
dependencies = [
    "pdf2image>=1.17.0",
    "typer>=0.9.0",
    "pydantic>=2.6.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
]
client = [
    "httpx>=0.27.0",
]
ui = [
    "streamlit>=1.30.0",
    "httpx>=0.27.0",  # UI uses client which uses httpx
]
all = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "streamlit>=1.30.0",
]

[project.scripts]
pdf2img = "pdf2img.cli:app"
pdf2img-ui = "pdf2img.launcher:main"

[tool.setuptools.packages.find]
where = ["src"]
